# OLYM_PTE

./: .gitignore  AIE7-info-for-mid-term.docx  Mermaid_graph.ipynb  Olym_PTE_mid_term.docx  folder_structure_example  mmd_chart.ipynb  ragas_MCQ_eval.md
backend/: .README_INTEGRATION.md.swp  .gitignore  README_INTEGRATION.md  README_RAG.md  agent_system.py  app.py  check_qdrant.py  evaluating_RAG_with_ragas.ipynb  flow_diagram.md  langgraph.json  mock_test.py  ollama_agent.py  pyproject.toml  pyproject.toml.ai  rag_chain_for_evaluation.py  rag_system.py  simple_ollama_test.py  simple_test.py  test_agent.py  tools.py  upload_documents.py
backend/bak/: app0.py  app1.py
backend/qdrant_data/: meta.json
frontend-vite/: package-lock.json  package.json
frontend-vite/src/: App.css  App.tsx  App_backup.tsx  README.md  TopicInput.tsx  TopicInput_backup.tsx  index.tsx
json_package_instruct/: how_to_instruct_app_to_ignore_json_comments  package.json.comments  what_is_package_json
notebooks/: .gitignore  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md  docs_dump.json  evaluating_RAG_with_ragas.py
